--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -4,13 +4,13 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="8dp"
-    android:background="@android:color/white"
+    android:background="@drawable/book_border"
     android:gravity="center">
 
     <ImageView
         android:id="@+id/ivBookCover"
-        android:layout_width="120dp"
-        android:layout_height="160dp"
+        android:layout_width="150dp"
+        android:layout_height="220dp"
         android:scaleType="centerCrop"
         android:layout_gravity="center" />
 
