--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -77,9 +77,59 @@
                 android:layout_height="wrap_content"
                 android:text="Borrow"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="@android:color/holo_blue_dark"
                 android:textColor="@android:color/white" />
 
+            <!-- RatingBar for User's Rating -->
+            <RatingBar
+                android:id="@+id/bookRatingBar"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!-- EditText for User's Review -->
+            <EditText
+                android:id="@+id/editReviewText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Write your book review here ..."
+                android:inputType="text"
+                android:minHeight="48dp" />
+
+            <!-- Submit Button -->
+            <Button
+                android:id="@+id/btnSubmitReview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/submit_rating" />
+
+            <!-- Divider -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="20dp"
+                android:background="@android:color/darker_gray" />
+
+            <!-- Existing Reviews Title -->
+            <TextView
+                android:id="@+id/tvReviewsTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Other Reviews"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"
+                android:textColor="@android:color/black" />
+
+            <!-- RecyclerView for displaying reviews -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewReviews"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_alignParentBottom="true" />
 
         </LinearLayout>
     </RelativeLayout>
