--- a/app/src/main/res/layout/fragment_user_book_catalogue.xml
+++ b/app/src/main/res/layout/fragment_user_book_catalogue.xml
@@ -6,6 +6,7 @@
     android:padding="8dp">
 
     <androidx.appcompat.widget.SearchView
+        android:fontFamily="@font/poppinsregular"
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
