--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -7,6 +7,7 @@
     android:layout_marginBottom="10dp">
 
     <TextView
+        android:fontFamily="@font/poppinsregular"
         android:id="@+id/tvUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +17,7 @@
         android:textColor="@android:color/black" />
 
     <TextView
+        android:fontFamily="@font/poppinsregular"
         android:id="@+id/tvCreatedAt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,6 +34,7 @@
         android:isIndicator="true" />
 
     <TextView
+        android:fontFamily="@font/poppinsregular"
         android:id="@+id/tvReviewText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
