--- a/app/src/main/res/layout/item_user_book.xml
+++ b/app/src/main/res/layout/item_user_book.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/book_border"
+    android:background="@drawable/user_book_border"
     android:padding="8dp">
 
     <ImageView
@@ -19,6 +19,7 @@
         android:layout_marginStart="8dp">
 
         <TextView
+            android:fontFamily="@font/poppinsregular"
             android:id="@+id/tvBookTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,6 +28,7 @@
             android:textSize="16sp" />
 
         <TextView
+            android:fontFamily="@font/poppinsregular"
             android:id="@+id/tvBookAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +36,7 @@
             android:textSize="14sp" />
 
         <TextView
+            android:fontFamily="@font/poppinsregular"
             android:id="@+id/tvBorrowDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +44,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:fontFamily="@font/poppinsregular"
             android:id="@+id/tvDueDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -48,6 +52,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:fontFamily="@font/poppinsregular"
             android:id="@+id/tvReturnDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
