--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -96,7 +96,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="1"/>
 
             <!-- EditText for User's Review -->
             <EditText
