minor changes to review cereation.Added delete account function.

--- a/app/src/main/res/layout/fragment_reviews.xml
+++ b/app/src/main/res/layout/fragment_reviews.xml
@@ -5,6 +5,18 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:fontFamily="@font/poppinsregular"
+        android:id="@+id/tvNoReviews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="No Book Reviews found."
+        android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:padding="16dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUserReviews"
         android:layout_width="match_parent"
