--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -84,6 +84,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Logout"
+            android:textColor="@android:color/white" />
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Delete Account"
             android:backgroundTint="@android:color/holo_red_dark"
             android:textColor="@android:color/white" />
 
