--- a/app/src/main/res/drawable/book_border.xml
+++ b/app/src/main/res/drawable/book_border.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#edebeb" /> <!-- Background color -->
+    <!-- Background color -->
     <stroke android:width="2dp" android:color="@android:color/darker_gray" /> <!-- Border color -->
     <corners android:radius="8dp" /> <!-- Rounded corners (optional) -->
 </shape>
