--- a/app/src/main/res/drawable/review_textview.xml
+++ b/app/src/main/res/drawable/review_textview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Solid fill color for the EditText background -->
-    <solid android:color="#FFFFFF" />
+    <!-- Solid fill color for the EditText background
+    <solid android:color="#FFFFFF" />-->
 
     <!-- Border color and width -->
     <stroke
