--- a/app/src/main/res/drawable/user_book_border.xml
+++ b/app/src/main/res/drawable/user_book_border.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#edebeb" /> <!-- Background color -->
+    <!--<solid android:color="#edebeb" />  Background color -->
     <stroke android:width="2dp" android:color="@android:color/darker_gray" /> <!-- Border color -->
 </shape>
