--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -47,11 +48,17 @@
             android:drawableEnd="@drawable/ic_pw_visibility_off"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:fontFamily="@font/poppinsregular"
             android:hint="Enter your password"
             android:inputType="textPassword"
             android:minHeight="48dp"
             android:paddingEnd="8dp" />
+
+        <Button
+            android:id="@+id/btnToggleTheme"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Toggle Theme"/>
 
         <!-- Edit and Save Buttons -->
         <Button
@@ -82,8 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Logout"
-            android:textColor="@android:color/white" />
+            android:text="Logout" />
         <Button
             android:id="@+id/btnDelete"
             android:layout_width="match_parent"
