--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,17 +2,17 @@
     <item
         android:id="@+id/nav_catalog"
         android:icon="@drawable/ic_catalog"
-        android:title="Catalog" />
+        android:title="Catalogue" />
     <item
         android:id="@+id/nav_borrowed_books"
         android:icon="@drawable/ic_borrowed_books"
-        android:title="Borrowed Books" />
+        android:title="My Books" />
     <item
         android:id="@+id/nav_reviews"
         android:icon="@drawable/ic_reviews"
-        android:title="Reviews" />
+        android:title="My Reviews" />
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="My Profile" />
 </menu>
