--- a/app/src/main/res/layout/fragment_user_books.xml
+++ b/app/src/main/res/layout/fragment_user_books.xml
@@ -10,10 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:text="No borrowed books found."
+        android:text="No Borrowed Books found."
         android:gravity="center"
         android:textSize="16sp"
         android:padding="16dp" />
+    <Button
+        android:id="@+id/btnRedirect"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Browse Books"
+        android:layout_gravity="center"
+        android:layout_below="@id/tvNoBooks"
+        android:layout_marginTop="10dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUserBooks"
