--- a/app/src/main/res/layout/fragment_book_catalogue.xml
+++ b/app/src/main/res/layout/fragment_book_catalogue.xml
@@ -1,7 +1,7 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -11,6 +11,23 @@
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
         android:queryHint="Search books..." />
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroupGenres"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        app:singleSelection="true"
+        android:orientation="horizontal" />
+
+    <TextView
+        android:id="@+id/tvNoBooks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="No Books found in Catalogue."
+        android:gravity="center"
+        android:textSize="16sp"
+        android:padding="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBooks"
