--- a/app/src/main/res/layout/item_staff_account.xml
+++ b/app/src/main/res/layout/item_staff_account.xml
@@ -21,6 +21,7 @@
         android:text="Role"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="55dp"
+        android:visibility="gone"
         android:textSize="14sp" />
 
     <Button
@@ -33,5 +34,8 @@
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:textColor="@color/white"
         android:text="Delete" />
 </LinearLayout>
