Satff User Activity Search Bar

--- a/app/src/main/res/layout/fragment_staff_user_activity.xml
+++ b/app/src/main/res/layout/fragment_staff_user_activity.xml
@@ -12,10 +12,30 @@
         android:iconifiedByDefault="false"
         android:layout_marginBottom="16dp"
         android:queryHint="Search Users" />
+    <TextView
+        android:id="@+id/tvNoUsers"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No Users" />
+
+    <Button
+        android:id="@+id/btnRetry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retry"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/tvNoUsers"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewUsers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
+
+
 
 </LinearLayout>
