--- a/app/src/main/res/layout/fragment_book_catalogue.xml
+++ b/app/src/main/res/layout/fragment_book_catalogue.xml
@@ -15,7 +15,7 @@
         android:id="@+id/chipGroupGenres"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="8dp"
+        android:layout_marginStart="16dp"
         app:singleSelection="true"
         android:orientation="horizontal" />
 
