--- a/app/src/main/res/layout/item_user_review.xml
+++ b/app/src/main/res/layout/item_user_review.xml
@@ -72,6 +72,7 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:isIndicator="true"
             android:numStars="5"
             android:stepSize="1"
             android:layout_marginTop="8dp" />
